functional_tests/istio/testdata/testobjects/1-serviceaccount.yaml
apiVersion: v1
kind: ServiceAccount
metadata:
  name: httpbin
  namespace: istio-workloads
