functional_tests/istio/testdata/testobjects/2-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  namespace: istio-workloads
  labels:
    app: httpbin
    service: httpbin
spec:
  ports:
    - name: http
      port: 8000
      targetPort: 8080
  selector:
    app: httpbin
